[package]
name = "cargo-license"
description = "Cargo subcommand to see license of dependencies"
authors = ["Onur Aslan <onur@onur.im>"]
version = "0.7.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/onur/cargo-license"
edition = "2021"
rust-version = "1.86"

[dependencies]
getopts = "0.2.21"
toml = "0.9.3"
csv = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
cargo_metadata = "0.21.0"
semver = "1.0"
clap = { version =  "4", features = ["derive"] }
anyhow = "1"
spdx = "0.10.0"
itertools = "0.14.0"
anstyle = "1.0.11"
